--- a/src/components/style.module.css
+++ b/src/components/style.module.css
@@ -6,21 +6,14 @@ h2 {
     color: blue;
 }
 
-
-.card {
- width: 170px;
- height: 270px;
- color: blue;
- border: 1px solid blue;
- margin: 15px;
- padding: 15px;
- 
-}
-
 .icon {
   width: 40px;
   height: 40px;
   font-size: 15px !important;
   margin: 3px;
   color: white !important;
+}
+
+.removeSelected {
+  margin: 10px 0;
 }
