--- a/src/components/Search/searchStyle.module.css
+++ b/src/components/Search/searchStyle.module.css
@@ -1,15 +1,26 @@
 .filter {
     margin-top: 10px;
     color: rgb(65, 140, 236);
-    
+    display: flex;
+    justify-content: center;
+    align-items: center;
 } 
+
+.filterBoxe {
+   display: inline-block !important;
+}
 
 .filterBoxes {
     border: none;
     border: 1px solid  rgb(65, 140, 236);
+    
 }
 
 .searchBox {
     border: none;
     border: 1px solid  rgb(65, 140, 236) !important;
+}
+
+.searchInput {
+    margin-bottom: 60px;
 }
