--- a/src/components/pages/About/aboutStyle.module.css
+++ b/src/components/pages/About/aboutStyle.module.css
@@ -1,3 +1,18 @@
-.aboutPage {
-    height: 88vh;
-}    
+.about {
+    margin: auto;
+    min-height: 86vh;
+    width: 90%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.aboutProject {
+    margin-left: 30px;
+}
+
+img {
+    /*margin-left: 30px;*/
+    height: 70vh;
+    width: 35vw;
+}
