--- a/src/components/NavMenu/navMenuStyle.module.css
+++ b/src/components/NavMenu/navMenuStyle.module.css
@@ -5,7 +5,8 @@
 
 .logout {
   padding-top: 1px;
-  padding-bottom: 1px;
+  padding-bottom: 2px;
+  color: white;
 }
 
 .header {
@@ -17,6 +18,7 @@
 
 .pagesMenu {
   width: 50%;
+  
 }
 
 .menu {
@@ -24,4 +26,12 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
+}
+
+.user {
+    color: white;
+    font-weight: 700;
+    display: inline-block;
+    margin-right: 10px;
+    margin-bottom: 0;
 }
